[package]
name = "hackmd-search"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.8", features = ["derive"] }
futures = "0.3.19"
meilisearch-sdk = "0.16.0"
regex = "1.5.4"
reqwest = { version = "0.11.9", features = ["cookies", "json"] }
reqwest-middleware = "0.1.6"
reqwest-retry = "0.1.5"
rpassword = "6.0.1"
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0.76"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["full"] }
